--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -761,10 +761,6 @@ h1{
   max-width:50% !important;
 }
 
-#quick-start{
-  background-color:#232325 ;
-  border-radius: 1em;
-}
 .get-started-img{
   max-width:100%;
   max-height:100%;
@@ -787,7 +783,7 @@ h1{
 .page-docs .langs a:hover {
   text-decoration: none;
   background: none !important;
-  color:#7919FF;
+  color:#9A52FF;
 }
 .page-docs .langs a{
   color:#E0E0E1
@@ -807,8 +803,22 @@ h1{
   width: 1rem; 
   height:1rem;
 }
+@keyframes arrowDance2 {
+  0% { right: 0; }
+  50% { right: 7px; }
+  100% { right: 0; }
+}
+.page-docs .btn-arrow-purple:hover{
+  color:#9A52FF;
+}
 .page-docs .btn-arrow-purple:hover::after{
   animation: arrowDance2 1.2s infinite;
+}
+.page-docs h1,h2,h3,h4,h5,h6,p{
+  font-family: 'Work Sans'!important;
+}
+.page-docs h1{
+  font-size: 3.875rem;
 }
 
 .page-docs .circled-logo{
@@ -880,20 +890,28 @@ h1{
 .page-docs p{
   font-family: Work Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
 }
-.light #quick-start{ 
+.light .quick-start{ 
   background-color:#FCFCFD ;
   border-radius: 1em;
 }
-.light #quick-start-img{
-  content: url(../img/docs/getstarted-white@2x.png);
+.quick-start{
+  background-color:#232325 ;
+  border-radius: 1em;
+  cursor: pointer;
+  transition: all .35s ease-out;
+}
+.quick-start :hover {
+  -webkit-transform: translateY(-16px);
+  -moz-transform: translateY(-16px);
+  -ms-transform: translateY(-16px);
+  -o-transform: translateY(-16px);
+  transform: translateY(-16px);
 }
 .light #quick-start-img{
-  content: url(../img/docs/getstarted-white@2x.png);
+  content: url(../img/docs/getstarted-white@2x_v2.png);
 }
 
-.light #quick-start-img{
-  content: url(../img/docs/getstarted-white@2x.png);
-}
+
 
 .light #nfts{
   content: url(../img/docs/nft-white@2x.png);
@@ -904,7 +922,9 @@ h1{
 .light #run-an-xrp-ledger-node{
   content: url(../img/docs/node-white@2x.png);
 }
-
+.light .dev-tools-img{
+  content: url(../img/docs/dev-tools-white@2x.png)
+}
 @media (max-width: 991.98px) {
   .page-docs section{
     padding-left:2rem;
@@ -913,30 +933,6 @@ h1{
 }
 
 
-.page-docs .nav .nav-link {
-  padding: 1rem 2rem 1rem 0;
-  color: #E0E0E1;
-  border-bottom: 1px solid #232325;
-  position: relative;
-}
-.page-docs .nav .nav-link :hover {
-    color: #9A52FF;
-  }
-.page-docs .nav .nav-link ::after {
-    content: " ";
-    background-image: url(../img/icons/arrow-right-purple.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 1rem;
-    position: absolute;
-    right: 0;
-    width: 1.5rem;
-    height: 1.5rem;
-    transition: all .2s ease;
-  }
-.page-docs .nav .nav-link :hover::after {
-    animation: arrowDance2 1.2s infinite;
-  }
 
 /* Card decks in mdx contents */
 .autocards a.card p,
@@ -991,4 +987,3 @@ h1{
 .autocards .card:nth-child(8) .card-footer {
   background-image: url(../img/cards/4col-orange-yellow.svg);
 }
-
