fix btn-arrow + clickable area

--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -780,11 +780,24 @@ h1{
 }
 
 
-.page-docs .langs a:hover {
+.page-docs .langs h5:hover {
+  text-decoration: none;
+  background: transparent !important;
+  color:#9A52FF;
+}
+.page-docs .dev-tools-link h6:hover {
   text-decoration: none;
   background: none !important;
   color:#9A52FF;
 }
+.page-docs .langs .btn-arrow::after{
+  content: url(../img/icons/arrow-right-purple.svg);
+  vertical-align: baseline;
+}
+.page-docs .dev-tools-link .btn-arrow::after{
+  content: url(../img/icons/arrow-right-purple.svg);
+}
+
 .page-docs .langs a{
   color:#E0E0E1
 }
@@ -793,26 +806,6 @@ h1{
 }
 .page-docs .langs h5{
   margin-block-start: 0 !important;
-}
-.page-docs  .btn-arrow-purple::after {
-  display:inline-block;
-  margin-left: 0.2em;
-  content: url(../img/icons/arrow-right-purple.svg);
-  vertical-align: center;
-  transition: all .2s ease;
-  width: 1rem; 
-  height:1rem;
-}
-@keyframes arrowDance2 {
-  0% { right: 0; }
-  50% { right: 7px; }
-  100% { right: 0; }
-}
-.page-docs .btn-arrow-purple:hover{
-  color:#9A52FF;
-}
-.page-docs .btn-arrow-purple:hover::after{
-  animation: arrowDance2 1.2s infinite;
 }
 .page-docs h1,h2,h3,h4,h5,h6,p{
   font-family: 'Work Sans'!important;
