--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -760,3 +760,245 @@ h1{
 .page-uses .biz-logo {
   max-width:50% !important;
 }
+
+.get-started-img{
+  max-width:100%;
+  max-height:100%;
+}
+.get-started-button{
+  width:9rem;
+  max-width:100%;
+}
+
+#quick-start-img{
+  max-width:100%
+}
+@media (max-width: 991.98px) {
+  .get-started-button{
+    max-width:100%
+  }
+}
+
+
+.page-docs .langs h5:hover {
+  color:#9A52FF;
+  text-decoration: none !important;
+  background: none!important;
+}
+.page-docs .dev-tools-link h6:hover {
+  color:#9A52FF;
+  text-decoration: none;
+  background: none!important;
+}
+.page-docs .dev-tools-link p:hover {
+  text-decoration: none !important;
+  background: none !important;
+}
+.page-docs .dev-tools-link a:hover{
+  color:#9A52FF;
+  text-decoration: none !important;
+}
+.page-docs .langs a:hover{
+  text-decoration: none !important;
+}
+.page-docs .langs .btn-arrow::after{
+  content: url(../img/icons/arrow-right-purple.svg);
+  vertical-align: baseline;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.page-docs .dev-tools-link .btn-arrow::after{
+  content: url(../img/icons/arrow-right-purple.svg);
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.page-docs .langs a{
+  color:#E0E0E1
+}
+.light .langs a{
+  color: #000;
+}
+.page-docs .langs h5{
+  margin-block-start: 0 !important;
+}
+.page-docs h1,h2,h3,h4,h5,h6,p{
+  font-family: 'Work Sans'!important;
+}
+.page-docs h1{
+  font-size: 3.875rem;
+}
+@media (max-width: 991.98px) {
+  /* Fix dropdown size with top banner present */
+  .page-docs .langs-cards {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+  }
+}
+
+.page-docs .circled-logo{
+  margin-left:0.1rem;
+}
+.use-cases{
+  border-bottom: 1px solid #111112;
+}
+.dev-tools-img{
+  max-width:100%; 
+  max-height: 100%;
+  margin:auto;
+}
+
+#video-overlay {
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:1190;
+  height:100%;
+  width:100%;
+  background:#ffffff;
+  opacity:0.6;
+  display:none;
+}
+
+#video {
+  display: none;
+  position: fixed;
+  top: 10%;
+  left: 15%;
+  width: 70%;
+  z-index: 1200;
+}
+
+#video-container {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  max-width: 982px;
+  padding: 0 20px;
+}
+
+#videoWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: calc(90vh - 100px);
+  width: 80vw;
+}
+
+#videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.page-docs p{
+  font-family: Work Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+.light .quick-start{ 
+  background-color:#FCFCFD ;
+  border-radius: 1em;
+}
+.quick-start{
+  background-color:#232325 ;
+  border-radius: 1em;
+  cursor: pointer;
+  transition: all .35s ease-out;
+}
+.quick-start :hover {
+  -webkit-transform: translateY(-16px);
+  -moz-transform: translateY(-16px);
+  -ms-transform: translateY(-16px);
+  -o-transform: translateY(-16px);
+  transform: translateY(-16px);
+}
+.light #quick-start-img{
+  content: url(../img/docs/getstarted-white@2x_v2.png);
+}
+.light .sdk-img{
+  content:url(../img/docs/sdk-white@2x.png);
+}
+.light #nfts{
+  content: url(../img/docs/nft-white@2x.png);
+}
+.light #build-a-wallet{
+  content: url(../img/docs/wallet-white@2x.png);
+}
+.light #run-an-xrp-ledger-node{
+  content: url(../img/docs/node-white@2x.png);
+}
+.light .dev-tools-img{
+  content: url(../img/docs/dev-tools-white@2x.png)
+}
+@media (max-width: 991.98px) {
+  .page-docs section{
+    padding-left:2rem;
+    padding-right:2rem;
+  }
+}
+
+
+
+/* Card decks in mdx contents */
+.autocards a.card p,
+.autocards a.card:hover p {
+  color: white;
+}
+.autocards .card-footer {
+  height: 1rem;
+}
+
+.autocards a.card.external-url::after {
+  /* Hide Redocly external link icon */
+  display:none;
+}
+
+.autocards a.card.external-url .card-title::after {
+  content: "\00a0";
+  background-image: url(../img/icons/arrow-up-right.svg);
+  background-repeat: no-repeat;
+  display: inline-block;
+  background-size: 16px;
+  padding: 0 4px 0 8px;
+  width: 24px;
+  background-position: left 4px top 8px;
+  transition: background-position 100ms ease-in-out;
+}
+.autocards a.card.external-url:hover .card-title::after {
+  background-position: left 8px top 4px;
+}
+
+.autocards .card:nth-child(1) .card-footer {
+  background-image: url(../img/cards/4col-orange.svg);
+}
+.autocards .card:nth-child(2) .card-footer {
+  background-image: url(../img/cards/4col-light-blue.svg);
+}
+.autocards .card:nth-child(3) .card-footer {
+  background-image: url(../img/cards/4col-green-2.svg);
+}
+.autocards .card:nth-child(4) .card-footer {
+  background-image: url(../img/cards/4col-magenta-3.svg);
+}
+.autocards .card:nth-child(5) .card-footer {
+  background-image: url(../img/cards/4col-yellow.svg);
+}
+.autocards .card:nth-child(6) .card-footer {
+  background-image: url(../img/cards/4col-blue-green-2.svg);
+}
+.autocards .card:nth-child(7) .card-footer {
+  background-image: url(../img/cards/4col-purple-blue.svg);
+}
+.autocards .card:nth-child(8) .card-footer {
+  background-image: url(../img/cards/4col-orange-yellow.svg);
+}
