--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -1086,8 +1086,11 @@ h1{
 .page-dev-tools .card-text{
 color:#E0E0E1
 }
+.light .page-dev-tools p{
+  color: #111112;
+}
 .light .page-dev-tools .card-text{
-color:#343437;
+  color:#343437;
 }
 .page-dev-tools h3{
 font-size: 3rem;
@@ -1097,4 +1100,8 @@ font-family: "Work Sans" !important;
 }
 .page-dev-tools .nav-item{
 margin-bottom:0px!important;
+}
+.page-dev-tools section{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
