fix merge issue

--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -1104,7 +1104,7 @@ margin-bottom:0px!important;
 .page-dev-tools section{
   padding-left: 2rem;
   padding-right: 2rem;
-
+}
 .page-xrpl-overview h6{
   font-size:1rem;
 }
@@ -1113,5 +1113,5 @@ margin-bottom:0px!important;
 }
 .page-xrpl-overview h1{
   font-size: 3.875rem;
-
 }
+
