--- a/@theme/styles.css
+++ b/@theme/styles.css
@@ -1,6 +1,10 @@
 :root body {
+  --font-size-base: 1rem;
   --navbar-height: 116px;
   --navbar-text-color: black;
+
+  --inline-code-text-color: #111112;
+  --inline-code-background-color: #11111212;
 
   --search-input-text-color: black;
   --search-highlight-text-color: #7919ff;
@@ -12,7 +16,10 @@ html.dark body {
   --navbar-text-color: white !important;
   --search-input-text-color: white;
   --search-input-background-color: #222225;
-  --search-input-hover-background-color:  #222225;
+  --search-input-hover-background-color: #222225;
+
+  --inline-code-text-color: white;
+  --inline-code-background-color: #1e2633;
 }
 
 #home-hero-graphic {
@@ -20,17 +27,22 @@ html.dark body {
   display: inline-block;
 }
 
-[data-component-name="Search/Search"] {
+[data-component-name='Search/Search'] {
   flex: 1;
 }
 
-[data-component-name="Search/Input"] {
+[data-component-name='Search/Input'] {
   width: 100%;
 }
-[data-component-name="Layout/PageLayout"] {
+[data-component-name='Layout/PageLayout'] {
   margin-top: var(--navbar-height);
 }
 
-.dbyGfc h1.md, .dbyGfc h2.md, .dbyGfc h3.md, .dbyGfc h4.md, .dbyGfc h5.md, .dbyGfc h6.md {
+.dbyGfc h1.md,
+.dbyGfc h2.md,
+.dbyGfc h3.md,
+.dbyGfc h4.md,
+.dbyGfc h5.md,
+.dbyGfc h6.md {
   scroll-margin-top: 136px;
 }
